--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -38,8 +38,8 @@
       />
   </LinearLayout>
 
-  <FrameLayout
-    android:id="@+id/frameLayout_fragmentView"
+  <android.support.v4.view.ViewPager
+    android:id="@+id/viewPager_fragmentView"
     android:layout_width="match_parent"
     android:layout_height="match_parent"/>
 
