--- a/app/src/main/res/layout/activity_diary_detail.xml
+++ b/app/src/main/res/layout/activity_diary_detail.xml
@@ -5,7 +5,7 @@
   android:layout_width="match_parent"
   android:layout_height="match_parent"
   android:orientation="vertical"
-  tools:context=".ui.activity.DiaryDetailActivity">
+  tools:context=".ui.diaryDetail.DiaryDetailActivity">
   <include
     android:id="@+id/item_header"
     layout="@layout/item_header"/>
