Change mainActivity (merge timelineFragment)
MainAcitivy에 timelineFragment의 레이아웃과 기능들을 합친다.

Fixes https://github.com/chatty-app/chatty-app/issues/27

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,47 +6,15 @@
   tools:context=".view.main.MainActivity"
   xmlns:android="http://schemas.android.com/apk/res/android"
   xmlns:tools="http://schemas.android.com/tools">
-  <LinearLayout
-    android:background="@color/gray1"
+  <android.support.constraint.ConstraintLayout
     android:layout_height="match_parent"
-    android:layout_width="match_parent"
-    android:orientation="vertical">
-    <include
-      layout="@layout/item_main_header"/>
-    <android.support.design.widget.TabLayout
-      android:id="@+id/tabLayout_navBar"
+    android:layout_width="match_parent">
+    <android.support.v7.widget.RecyclerView
+      android:id="@+id/recyclerView_timeline"
       android:layout_width="match_parent"
-      android:layout_height="@dimen/activity_main_global_header_layout_height"/>
-    <TextView
-      android:fontFamily="sans-serif-medium"
-      android:layout_height="wrap_content"
-      android:layout_marginStart="@dimen/SIZE_20"
-      android:layout_marginTop="@dimen/SIZE_20"
-      android:layout_marginBottom="@dimen/SIZE_12"
-      android:layout_width="wrap_content"
-      android:text="@string/main_text_Mypartner"
-      android:textColor="@color/black0"
-      android:textSize="@dimen/text_size_14sp"
-      android:textStyle="normal"
-      android:letterSpacing="0.3"/>
-    <include layout="@layout/item_my_partner"/>
-    <TextView
-      android:fontFamily="sans-serif-medium"
-      android:layout_height="wrap_content"
-      android:layout_marginStart="@dimen/SIZE_20"
-      android:layout_marginTop="@dimen/SIZE_20"
-      android:layout_marginBottom="@dimen/SIZE_2"
-      android:layout_width="wrap_content"
-      android:letterSpacing="0.3"
-      android:text="Timeline"
-      android:textColor="@color/black0"
-      android:textSize="@dimen/text_size_14sp"
-      android:textStyle="normal"/>
-    <android.support.v4.view.ViewPager
-      android:id="@+id/frameLayout_main"
-      android:layout_height="match_parent"
-      android:layout_width="match_parent"/>
-  </LinearLayout>
+      android:layout_height="@dimen/fragment_timeline_recyclerview_timeline_layout_height"
+      android:layout_weight="@dimen/fragment_timeline_recyclerview_timeline_layout_weight"/>
+  </android.support.constraint.ConstraintLayout>
   <android.support.design.widget.FloatingActionButton
     android:id="@+id/floatingActionButton_write"
     android:layout_width="wrap_content"
