--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -14,6 +14,7 @@
   <color name="gray2">#868686</color>
   <color name="gray3">#dadada</color>
   <color name="gray4">#e1e1e1</color>
+  <color name="gray5">#33000000</color>
 
   <color name="Yellow">#fff47f</color>
 
