--- a/app/src/main/res/values/dimen.xml
+++ b/app/src/main/res/values/dimen.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
   <dimen name="match_constraint">0dp</dimen>
+  <dimen name="SIZE_1">1dp</dimen>
   <dimen name="SIZE_2">2dp</dimen>
   <dimen name="SIZE_3">3dp</dimen>
   <dimen name="SIZE_5">5dp</dimen>
@@ -70,5 +71,4 @@
   <dimen name="size_16dp">16dp</dimen>
   <dimen name="size_19dp">19dp</dimen>
   <dimen name="text_size_10sp">10sp</dimen>
-
 </resources>
