Set custom alertDialog
설정 창에서 사용되는 alert화면 일부를 수정한다.

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -9,7 +9,9 @@
   </style>
 
   <style name="AlertDialogStyle" parent="Theme.AppCompat.Light.Dialog">
-    <item name="colorAccent"> @color/main_purple</item>
+    <item name="colorAccent">@color/black0</item>
+    <item name="android:windowMinWidthMinor">80%</item>
+    <item name="android:windowBackground">@drawable/layout_alert</item>
   </style>
 
 </resources>
