--- a/app/src/main/res/values/dimen.xml
+++ b/app/src/main/res/values/dimen.xml
@@ -23,8 +23,10 @@
   <dimen name="SIZE_50">50dp</dimen>
   <dimen name="SIZE_56">56dp</dimen>
   <dimen name="SIZE_60">60dp</dimen>
+  <dimen name="SIZE_70">70dp</dimen>
   <dimen name="SIZE_80">80dp</dimen>
   <dimen name="SIZE_90">90dp</dimen>
+  <dimen name="SIZE_96">96dp</dimen>
   <dimen name="SIZE_108">108dp</dimen>
   <dimen name="SIZE_120">120dp</dimen>
   <dimen name="SIZE_140">140dp</dimen>
