Make appear friends settings or addFriend based on status - Initialize user-data sharedPreference USER-DATA sharedPreference를 만든다. - Switch between Friends_setting and Add Friend function Friends_setting와 Add Friend 사이를 기존 프로필 등록 여부를 통해 판단하는 기능을 만든다. - Fix Glide context issue glide.with()에서 context 종료시 동작 안하는 문제를 해결한다. - Fix codereview issue this 붙이기, lambda 매개변수 코드 스타일을 수정한다.
Fixes https://github.com/chatty-app/chatty-app/issues/55

--- a/app/src/main/res/layout/activity_add_friend.xml
+++ b/app/src/main/res/layout/activity_add_friend.xml
@@ -88,7 +88,7 @@
     app:layout_constraintEnd_toEndOf="parent"/>
   <!--TODO: Add radius option in button-->
   <Button
-    android:id="@+id/button_edit_profile"
+    android:id="@+id/button_add_profile"
     android:background="@color/gray1"
     android:layout_width="match_parent"
     android:layout_height="@dimen/SIZE_48"
