--- a/app/src/main/res/layout/activity_add_friend.xml
+++ b/app/src/main/res/layout/activity_add_friend.xml
@@ -15,6 +15,7 @@
     app:layout_constraintBottom_toTopOf="@+id/imageView_profile"/>
   <ImageView
     android:id="@+id/imageView_profile"
+    android:scaleType="centerCrop"
     android:src="@color/gray1"
     android:layout_width="@dimen/SIZE_96"
     android:layout_height="@dimen/SIZE_96"
