--- a/app/src/main/res/values/dimen.xml
+++ b/app/src/main/res/values/dimen.xml
@@ -23,6 +23,7 @@
   <dimen name="SIZE_50">50dp</dimen>
   <dimen name="SIZE_56">56dp</dimen>
   <dimen name="SIZE_60">60dp</dimen>
+  <dimen name="SIZE_64">64dp</dimen>
   <dimen name="SIZE_70">70dp</dimen>
   <dimen name="SIZE_80">80dp</dimen>
   <dimen name="SIZE_90">90dp</dimen>
