--- a/app/src/main/res/layout/activity_friends_setting.xml
+++ b/app/src/main/res/layout/activity_friends_setting.xml
@@ -15,6 +15,7 @@
     app:layout_constraintBottom_toTopOf="@+id/imageView_profile"/>
   <ImageView
     android:id="@+id/imageView_profile"
+    android:scaleType="centerCrop"
     android:src="@mipmap/ic_launcher_round"
     android:layout_width="@dimen/SIZE_80"
     android:layout_height="@dimen/SIZE_80"
