Fix mainActivity layout
mainActivity layout을 수정한다.

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -65,14 +65,14 @@
     app:layout_constraintStart_toStartOf="parent"
     app:layout_constraintTop_toBottomOf="@id/main_textView_Timeline"/>
   <android.support.design.widget.FloatingActionButton
-    android:backgroundTint="@color/white5"
     android:id="@+id/btn_start_chatting"
-    android:layout_width="64dp"
-    android:layout_height="64dp"
-    android:layout_gravity="end|bottom"
-    android:layout_margin="@dimen/activity_main_floating_action_button_write_layout_margin"
-    android:background="@drawable/write_button"
-    android:visibility="invisible"
+    android:backgroundTint="@color/main_purple"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:src="@drawable/ic_icon_write"
+    android:layout_marginBottom="@dimen/SIZE_20"
+    android:layout_marginEnd="@dimen/SIZE_20"
+    app:fabSize="normal"
     app:layout_constraintBottom_toBottomOf="parent"
-    app:layout_constraintRight_toRightOf="parent" />
+    app:layout_constraintEnd_toEndOf="parent"/>
 </android.support.constraint.ConstraintLayout>
