--- a/app/src/main/res/layout/item_timeline_entry.xml
+++ b/app/src/main/res/layout/item_timeline_entry.xml
@@ -8,6 +8,7 @@
   xmlns:app="http://schemas.android.com/apk/res-auto">
   <ImageView
     android:adjustViewBounds="true"
+    android:foreground="@drawable/layout_thumbnail"
     android:id="@+id/imageView_timeline"
     android:layout_height="match_parent"
     android:layout_marginStart="@dimen/SIZE_20"
