--- a/app/src/main/res/layout/item_timeline_entry.xml
+++ b/app/src/main/res/layout/item_timeline_entry.xml
@@ -14,6 +14,7 @@
     android:layout_marginBottom="15dp"
     android:layout_width="@dimen/SIZE_120"
     android:scaleType="centerInside"
+    android:foreground="@drawable/layout_thumbnail"
     android:src="@drawable/timeline_thumbnail_dummy"
     app:layout_constraintBottom_toBottomOf="parent"
     app:layout_constraintStart_toStartOf="parent"
