--- a/app/src/main/res/drawable/layout_thumbnail.xml
+++ b/app/src/main/res/drawable/layout_thumbnail.xml
@@ -1,15 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-<shape xmlns:android="http://schemas.android.com/apk/res/android">
-  <solid
-    android:src="@drawable/sample_profile" />
+<shape xmlns:android="http://schemas.android.com/apk/res/android"
+  android:innerRadiusRatio="2"
+  android:shape="ring"
+  android:thicknessRatio="1"
+  android:useLevel="false">
+  <gradient
+    android:type="radial"
+    android:gradientRadius="0dp"
+    android:endColor="@color/white5" />
   <stroke
-    android:src="@drawable/sample_profile" />
-  <stroke
-    android:width="1dp"/>
-  <corners android:radius="10dp"/>
-  <padding
-    android:bottom="0dp"
-    android:left="0dp"
-    android:right="0dp"
-    android:top="0dp"/>
+    android:width="2dp"
+    android:color="@color/main_purple" />
+  <size
+    android:height="50dp"
+    android:width="50dp" />
 </shape>
