--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -57,7 +57,7 @@
     app:layout_constraintTop_toBottomOf="@id/item_my_partner"/>
   <android.support.v7.widget.RecyclerView
     android:id="@+id/recyclerView_timeline"
-    android:layout_height="@dimen/fragment_timeline_recyclerview_timeline_layout_height"
+    android:layout_height="@dimen/match_constraint"
     android:layout_weight="@dimen/fragment_timeline_recyclerview_timeline_layout_weight"
     android:layout_width="@dimen/match_constraint"
     app:layout_constraintBottom_toBottomOf="parent"
