--- a/app/src/main/res/layout/item_timeline_entry.xml
+++ b/app/src/main/res/layout/item_timeline_entry.xml
@@ -2,29 +2,28 @@
 <android.support.constraint.ConstraintLayout
   android:layout_height="@dimen/SIZE_90"
   android:layout_marginBottom="@dimen/size_10dp"
+  android:layout_marginEnd="@dimen/SIZE_20"
+  android:layout_marginStart="@dimen/SIZE_20"
   android:layout_marginTop="@dimen/size_10dp"
   android:layout_width="match_parent"
   xmlns:android="http://schemas.android.com/apk/res/android"
   xmlns:app="http://schemas.android.com/apk/res-auto">
-  <ImageView
+  <com.chatty.android.chattyClient.widget.TimelineImageView
     android:adjustViewBounds="true"
     android:id="@+id/imageView_timeline"
-    android:layout_height="match_parent"
-    android:layout_marginStart="@dimen/SIZE_20"
-    android:layout_marginBottom="15dp"
+    android:layout_height="@dimen/SIZE_90"
     android:layout_width="@dimen/SIZE_120"
     android:scaleType="centerCrop"
     android:src="@drawable/timeline_thumbnail_dummy"
     app:layout_constraintBottom_toBottomOf="parent"
     app:layout_constraintStart_toStartOf="parent"
-    app:layout_constraintTop_toTopOf="parent" />
+    app:layout_constraintTop_toTopOf="parent"/>
   <TextView
     android:id="@+id/textView_timeline_date"
     android:layout_height="wrap_content"
     android:layout_marginStart="@dimen/SIZE_20"
     android:layout_marginTop="@dimen/SIZE_6"
     android:layout_width="wrap_content"
-    android:letterSpacing="0.5"
     android:text="2018.07.20 FRI"
     android:textColor="@color/black0"
     android:textStyle="normal"
