--- a/app/src/main/res/layout/item_my_partner.xml
+++ b/app/src/main/res/layout/item_my_partner.xml
@@ -9,13 +9,13 @@
   xmlns:android="http://schemas.android.com/apk/res/android"
   xmlns:app="http://schemas.android.com/apk/res-auto">
   <ImageView
-    android:id="@+id/profile_avatar_img"
     android:foreground="@drawable/layout_circle_profile_main"
+    android:id="@+id/profile_avatar_img"
     android:scaleType="centerCrop"
     android:src="@color/gray1"
+    android:layout_height="@dimen/SIZE_80"
     android:layout_marginStart="@dimen/SIZE_20"
     android:layout_width="@dimen/SIZE_80"
-    android:layout_height="@dimen/SIZE_80"
     app:layout_constraintBottom_toBottomOf="parent"
     app:layout_constraintStart_toStartOf="parent"
     app:layout_constraintTop_toTopOf="parent"/>
@@ -23,17 +23,17 @@
     android:ellipsize="end"
     android:fontFamily="sans-serif"
     android:id="@+id/partner_name"
-    android:maxLines="1"
-    android:paddingEnd="@dimen/size_10dp"
     android:layout_height="wrap_content"
     android:layout_marginStart="@dimen/SIZE_40"
     android:layout_marginTop="@dimen/SIZE_3"
     android:layout_width="@dimen/match_constraint"
     android:letterSpacing="0.06"
+    android:maxLines="1"
+    android:paddingEnd="@dimen/size_10dp"
     android:text="Partner name"
     android:textColor="@color/Yellow"
-    android:textStyle="bold"
     android:textSize="@dimen/text_size_16sp"
+    android:textStyle="bold"
     app:layout_constraintBottom_toTopOf="@+id/dialog_count"
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintHorizontal_bias="0"
@@ -42,8 +42,8 @@
   <TextView
     android:fontFamily="sans-serif"
     android:id="@+id/dialog_count"
-    android:layout_height="wrap_content"
     android:layout_marginTop="@dimen/SIZE_10"
+    android:layout_height="wrap_content"
     android:layout_width="wrap_content"
     android:letterSpacing="0.1"
     android:text="10"
@@ -62,9 +62,9 @@
     android:text="@string/text_dialogs"
     android:textColor="@color/white5"
     android:textSize="@dimen/text_size_14sp"
-    app:layout_constraintTop_toTopOf="@id/dialog_count"
     app:layout_constraintBottom_toBottomOf="@id/dialog_count"
-    app:layout_constraintStart_toEndOf="@id/dialog_count"/>
+    app:layout_constraintStart_toEndOf="@id/dialog_count"
+    app:layout_constraintTop_toTopOf="@id/dialog_count"/>
   <TextView
     android:fontFamily="sans-serif"
     android:id="@+id/day_count"
@@ -76,8 +76,8 @@
     android:textColor="@color/white5"
     android:textSize="@dimen/text_size_14sp"
     android:textStyle="bold"
-    app:layout_constraintTop_toBottomOf="@id/dialog_count_label"
-    app:layout_constraintStart_toStartOf="@id/partner_name"/>
+    app:layout_constraintStart_toStartOf="@id/partner_name"
+    app:layout_constraintTop_toBottomOf="@id/dialog_count_label"/>
   <TextView
     android:fontFamily="sans-serif"
     android:id="@+id/day_count_label"
@@ -88,9 +88,9 @@
     android:text="@string/text_day"
     android:textColor="@color/white5"
     android:textSize="@dimen/text_size_14sp"
-    app:layout_constraintTop_toTopOf="@id/day_count"
     app:layout_constraintBottom_toBottomOf="@id/day_count"
-    app:layout_constraintStart_toEndOf="@id/day_count"/>
+    app:layout_constraintStart_toEndOf="@id/day_count"
+    app:layout_constraintTop_toTopOf="@id/day_count"/>
   <TextView
     android:fontFamily="sans-serif-medium"
     android:id="@+id/current_date"
