refactor: validate input value
프로필 이미지와 유저 이름이 알맞은지 검사한다.

--- a/app/src/main/res/layout/activity_friends_setting.xml
+++ b/app/src/main/res/layout/activity_friends_setting.xml
@@ -133,6 +133,7 @@
     android:text="@string/SETTING_PROFILE_MAIN_EDIT_BUTTON"
     android:textAllCaps="false"
     android:textColor="@color/white5"
+    android:visibility="gone"
     android:layout_marginStart="@dimen/SIZE_20"
     android:layout_marginEnd="@dimen/SIZE_20"
     android:layout_marginBottom="@dimen/SIZE_20"
