feat: fix layout & add delay time
서버 통신 이후 delayTime을 준다. timeLine을 일부 수정한다.

--- a/app/src/main/res/layout/item_friends_list.xml
+++ b/app/src/main/res/layout/item_friends_list.xml
@@ -7,6 +7,7 @@
   android:layout_height="@dimen/SIZE_64">
   <ImageView
     android:id="@+id/imageView_profile_now"
+    android:scaleType="centerCrop"
     android:src="@color/gray1"
     android:layout_width="@dimen/SIZE_40"
     android:layout_height="@dimen/SIZE_40"
@@ -25,16 +26,22 @@
     android:textSize="@dimen/text_size_14sp"
     app:layout_constraintTop_toTopOf="@+id/imageView_profile_now"
     app:layout_constraintStart_toEndOf="@+id/imageView_profile_now"/>
+
   <TextView
     android:id="@+id/textView_profile_bio_now"
-    android:layout_width="wrap_content"
+    android:ellipsize="end"
+    android:layout_width="@dimen/match_constraint"
     android:layout_height="wrap_content"
-    android:layout_marginStart="@dimen/size_8dp"
+    android:layout_marginStart="8dp"
+    android:paddingEnd="@dimen/SIZE_8"
+    android:maxLines="1"
     android:text="I'm with COCO."
     android:textColor="@color/gray2"
     android:textSize="@dimen/text_size_12sp"
     app:layout_constraintBottom_toBottomOf="@+id/imageView_profile_now"
-    app:layout_constraintStart_toEndOf="@+id/imageView_profile_now"/>
+    app:layout_constraintEnd_toStartOf="@+id/textView_profile_date_now"
+    app:layout_constraintHorizontal_bias="0.0"
+    app:layout_constraintStart_toEndOf="@+id/imageView_profile_now" />
   <TextView
     android:id="@+id/textView_profile_date_now"
     android:layout_width="wrap_content"
