feat: add ImageView in item_diary.xml
item_diary.xml에 ImageView를 추가한다.

--- a/app/src/main/res/layout/item_diary_detail.xml
+++ b/app/src/main/res/layout/item_diary_detail.xml
@@ -23,6 +23,7 @@
     layout="@layout/item_diary_detail_header"/>
   <android.support.v7.widget.RecyclerView
     android:id="@+id/recyclerView_diary"
+    android:background="@color/white3"
     android:layout_height="@dimen/match_constraint"
     android:layout_width="@dimen/match_constraint"
     app:layout_constraintBottom_toBottomOf="parent"
