--- a/app/src/main/res/layout/item_diary_detail.xml
+++ b/app/src/main/res/layout/item_diary_detail.xml
@@ -19,7 +19,7 @@
     android:layout_width="@dimen/match_constraint"
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintStart_toStartOf="parent"
-    app:layout_constraintTop_toBottomOf="@+id/item_global_header"
+    app:layout_constraintTop_toBottomOf="@id/item_global_header"
     layout="@layout/item_diary_detail_header"/>
   <android.support.v7.widget.RecyclerView
     android:id="@+id/recyclerView_diary"
