--- a/app/src/main/res/layout/item_profile_avatar2.xml
+++ b/app/src/main/res/layout/item_profile_avatar2.xml
@@ -8,7 +8,7 @@
     android:id="@+id/profile_avatar_img"
     android:layout_height="@dimen/SIZE_40"
     android:layout_width="@dimen/SIZE_40"
-    android:src="@drawable/sample_profile"
+    android:scaleType="centerCrop"
     app:layout_constraintBottom_toBottomOf="parent"
     app:layout_constraintStart_toStartOf="parent"
     app:layout_constraintTop_toTopOf="parent"
