--- a/app/src/main/res/layout/item_timeline_entry.xml
+++ b/app/src/main/res/layout/item_timeline_entry.xml
@@ -32,6 +32,7 @@
     app:layout_constraintTop_toTopOf="@id/imageView_timeline"/>
   <TextView
     android:id="@+id/textView_contents"
+    android:ellipsize="end"
     android:layout_height="wrap_content"
     android:layout_marginTop="@dimen/size_8dp"
     android:layout_width="@dimen/match_constraint"
@@ -40,6 +41,7 @@
     android:textColor="@color/black0"
     android:textStyle="normal"
     android:textSize="@dimen/text_size_12sp"
+    app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintStart_toStartOf="@+id/textView_timeline_date"
     app:layout_constraintTop_toBottomOf="@+id/textView_timeline_date"/>
 </android.support.constraint.ConstraintLayout>
